--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
